# skillbot

./: .gitignore  README.md  pyproject.toml
conf/: .env.example  claude-md.example  dev.md  jupyter_agent.example.yaml  jupyter_agent.yaml.example
conf/agent_conf/claude-code/: .env.example  settings.example.json
conf/agent_conf/deer-flow/: .env.example  config.example.yaml
conf/agent_conf/hermes-agent/: .env.example  config.example.yaml
conf/agent_conf/nanobot/: .env.example  config.example.json
docs/superpowers/specs/: 2026-05-27-panel-shadowdom-comm-design.md
scripts/: dev.md  eval.sh  install.sh  jupyter.sh  run.sh
skills/stock-analysis/: SKILL.md
skills/stock-data-fetch/: SKILL.md
skills/stock-data-fetch/references/: .env  .env.example  file_format.md  requirements.txt  stock_data_fetcher.py
src/agent/: __init__.py  claude_example.md  prompt.py  session.py
src/chat/: __init__.py  base.py  claude.py  deerflow.py  dev.md  hermes.py  nanobot.py  skill.py
src/eval/: __init__.py  dev.md  loader.py  runner.py  task.py  trace.py
src/hook/: __init__.py  base.py  events.py
src/hook/impl/: cell_review.py  code_review.py
src/jupyter/: __init__.py  agent_session.py  cell_snapshot.py  comm.py  config.py  dev.md  feedback.py  magic.py  namespace.py  notebook_snapshot.py  panel.py  parser.py  render.py  review.py  snapshot_utils.py  sql.py  telemetry.py
src/jupyter/extension/: package.json  tsconfig.json
src/server/: __init__.py  app.py  dev.md  session.py
src/task/: __init__.py  manager.py  task.py
src/tools/: __init__.py  dev.md  interface.py  registry.py
tests/chat/: conftest.py  test_async.py  test_base.py  test_claude.py  test_deerflow.py  test_hermes.py  test_nanobot.py  test_skill_manager.py
tests/eval/: test_loader.py  test_runner.py  test_task.py  test_trace.py
tests/hook/: test_base.py
tests/interrupt/: test_agent_interrupt.py  test_interrupt_e2e.py  test_interrupt_tool_fix.py  test_magic_interrupt.py  test_magic_interrupt_tool.py
tests/jupyter/: test_comm.py  test_feedback.py  test_hook.py  test_namespace.py  test_parser.py  test_render.py  test_sql.py  test_sql_dsl.py  test_sql_playwright.py  test_telemetry.py
tests/server/: conftest.py  test_app.py  test_session.py
tests/skills/: test_stock_skills.py
tests/task/: test_task.py
tests/tools/: test_builtin.py  test_registry.py  test_spark_sql.py
(+58 files in other folders)
