[project]
name = "skillbot"
version = "0.2.0"
description = "Multi-agent framework — unified chat API for deer-flow, nanobot, hermes-agent, and claude-code"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "skillbot" }]

dependencies = [
    "requests>=2.28",
    "fastapi>=0.100",
    "uvicorn>=0.30",
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
]
nanobot = [
    "websockets>=12.0",
]
deerflow = []  # LangGraph REST API on port 8001, no extra deps needed

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "deerflow: tests requiring deer-flow :8001 reachable",
    "nanobot: tests requiring nanobot :8900 reachable",
    "hermes: tests requiring hermes :8642 reachable",
    "integration: tests requiring actual agent processes running",
    "asyncio: async test marker",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chat", "src/eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
